--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "express-validator": "^6.2.0",
-    "mongoose": "^5.7.1"
+    "mongoose": "^5.7.1",
+    "postman": "^0.2.0"
   },
   "devDependencies": {
     "concurrently": "^4.1.2",
