--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "config": "^3.2.2",
+    "create-react-app": "^3.2.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "express-validator": "^6.2.0",
-    "mongoose": "^5.7.1"
+    "mongoose": "^5.7.1",
+    "react": "^16.10.2"
   },
   "devDependencies": {
     "concurrently": "^4.1.2",
